# 2D-shooting-blocks-with-physics

./: .gitignore  CMakeLists.txt  GAME_DEVELOPMENT_PLAN.md  PROJECT_DESIGN_DOCUMENTATION.md  README.md  gamedata.json  run.sh  sdl3_test  sdl3_test.cpp
assets/: map1.json
src/: main.cpp
src/core/: Blackboard.cpp  Blackboard.hpp  Component.hpp  Components.hpp  Entity.hpp  GameEngine.cpp  GameEngine.hpp  Manager.cpp  Manager.hpp  System.hpp
src/gameplay/: ShootingSystem.cpp  ShootingSystem.hpp
src/input/: InputSystem.cpp  InputSystem.hpp
src/map/: MapSystem.cpp  MapSystem.hpp
src/movement/: MovementSystem.cpp  MovementSystem.hpp
src/physics/: PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsSystem_new.cpp  PhysicsSystem_new.hpp  PhysicsSystem_old.cpp  PhysicsSystem_old.hpp
src/rendering/: HUDSystem.cpp  HUDSystem.hpp  Renderer.cpp  Renderer.hpp  RenderingSystem.cpp  RenderingSystem.hpp
